v4.8 ???
  - Added the %InitialisationCode directive.

v4.7.9 17th November 2008
  - A bug fix release.

v4.7.8 8th November 2008
  - Added the /Deprecated/ class and function annotation (based on a patch from
    Lorenzo Berni).
  - Templates now support instance variables and enums.
  - A Python int object can now be used whenever an enum is expected without
    needing to explicitly cast it using the enum's constructor.  The
    /Constrained/ argument annotation can be used to suppress this behaviour.
  - typedef type names are now used in string representations of types (e.g. in
    the names of mapped types) to reflect what the programmer sees rather than
    what the compiler sees.  The /NoTypeName/ typedef annotation can be used to
    suppress this behaviour.

v4.7.7 8th August 2008
  - C++ structs are now properly handled as a class with a default public
    section.
  - sip.dump() now includes the object's first child wrapper.

v4.7.6 20th May 2008
  - Added the -s flag to configure.py to specify the SDK directory to use when
    building universal binaries on MacOS/X.
  - Added support for MSVC 2008 to the build system.
  - Added support for v10.x of the Intel compiler and removed support for
    earlier versions.
  - MSVC 2008 is the default platform when using Python v2.6.

v4.7.5 13th May 2008
  - The sip.voidptr type has an optional size associated with it and supports
    const void *.  If a size is associated then it also supports Python's
    buffer protocol.
  - Added sipConvertToVoidPtr() to the SIP API.
  - Added sipConvertFromConstVoidPtr(), sipConvertFromConstVoidPtrAndSize(),
    sipConvertFromVoidPtr() and sipConvertFromVoidPtrAndSize() to the SIP API.
  - Added the /ResultSize/ argument annotation to specify the size of a block
    of memory returned as a void * or const void *.
  - Added the /NoArgParser/ function annotation to give %MethodCode complete
    responsibility for argument parsing.